[UPD] Add lognote to Extended Case Sync

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -89,7 +89,8 @@
             PersonsName: "case__PersonsName",
             PersonsPhone:  "case__PersonsPhone",
             PlanDate: "case__PlanDate",
-            WatchDate: "case__WatchDate"
+            WatchDate: "case__WatchDate",
+            log_InternalText: "CaseLog_TextInternal"
 
         },
 
