--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/Edit.cshtml
@@ -20,7 +20,7 @@
 
 
 
-@using (Html.BeginForm("editsave", "casesolution", new { id = Model.CaseSolution.Id }, FormMethod.Post, new { id = "target" }))
+@using (Html.BeginForm("Edit", "casesolution", new { id = Model.CaseSolution.Id }, FormMethod.Post, new { id = "target" }))
 {
     @Html.Hidden("PageId", backPageId)
 
