[FIX] Connection between Case and ExtendedCase

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -59,8 +59,6 @@
         extendedCaseGuid: '@(Model.ContainsExtendedCase? Model.ExtendedCases.First().ExtendedCaseGuid.ToString() : "" )',
         extendedCaseLanguageId: '@(Model.ContainsExtendedCase? Model.ExtendedCases.First().LanguageId.ToString() : "" )',
         extendedCasePath: '@(Model.ContainsExtendedCase? Model.ExtendedCases.First().Path.ToString() : "" )',
-        @*extendedCaseStatus: '@(Model.ContainsExtendedCase? Model.ExtendedCases.First().CaseStatus.ToString() : "" )',
-        extendedUserRole: '@(Model.ContainsExtendedCase? Model.ExtendedCases.First().UserRole.ToString() : "" )',*@
 
         caseFieldIds:{
             CaseId: "case__Id",
@@ -303,6 +301,7 @@
                         @Html.Hidden("IsAnyFileAdded", "0")
                         @Html.Hidden("CaseSolution_Id", (Model.NewModeParams != null && Model.NewModeParams.templateId != null) ? Model.NewModeParams.templateId : Model.case_.CaseSolution_Id)
                         @Html.HiddenFor(model => model.ActiveTab)
+                        @Html.HiddenFor(model => model.SelectedWorkflowStep)
                         
 
 
