[FIX] #58024 Order overview by order types self-service

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/_Layout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/_Layout.cshtml
@@ -347,7 +347,7 @@
                         }
                     }
                     
-                    @if (!hideMenu && SessionFacade.CurrentLocalUser != null && orderModuleIsEnabled && userHasOrderTypes)
+                    @if (!hideMenu && SessionFacade.CurrentLocalUser != null && orderModuleIsEnabled && (SessionFacade.CurrentLocalUser.IsAdministrator() || userHasOrderTypes))
                     {
                         <li class="blue">
                             <a href="@Url.Action("Index", "Orders", new { customerId = pCustomerId, area = "" })">
