--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/New.cshtml
@@ -18,17 +18,20 @@
 
             $("#case-action-save").click(function (e) {
                 e.preventDefault();                
-                //$('#case__StateSecondary_Id').removeAttr('disabled');                
+                //$('#case__StateSecondary_Id').removeAttr('disabled');      
+                $('#ButtonClick').val('save');
             });
 
             $("#case-action-save-and-close").click(function (e) {
                 e.preventDefault();                
                 //$('#case__StateSecondary_Id').removeAttr('disabled');                
+                $('#ButtonClick').val('save');
             });
 
             $("#case-action-save-and-new").click(function (e) {
                 e.preventDefault();                
                 //$('#case__StateSecondary_Id').removeAttr('disabled');                
+                $('#ButtonClick').val('save');
             });
         });
 
