--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ProductArea/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ProductArea/_Input.cshtml
@@ -106,16 +106,16 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        @Translation.Get("Visa", Enums.TranslationSource.TextTranslation)
+                                        @*@Translation.Get("Visa", Enums.TranslationSource.TextTranslation)*@
                                         @*#57740*@
-                                        @*@Translation.Get("Visa i lista", Enums.TranslationSource.TextTranslation)*@
+                                        @Translation.Get("Visa i lista", Enums.TranslationSource.TextTranslation)
                                     </td>
                                     <td><label class="checkbox">
                                         <input type="checkbox" name="productarea.ShowOnExternalPage" @(Model.ProductArea.ShowOnExternalPage == 1 ? "checked=checked" : "") value="1"/>
                                         <input type="hidden" name="productarea.ShowOnExternalPage" value="0" />
-                                            &nbsp;@Translation.Get("Visa produktområde på självservice", Enums.TranslationSource.TextTranslation)
+                                            &nbsp;@*@Translation.Get("Visa produktområde på självservice", Enums.TranslationSource.TextTranslation)*@
                                         @*#57740*@
-                                        @*Translation.Get("Självservice", Enums.TranslationSource.TextTranslation)*@
+                                        @Translation.Get("Självservice", Enums.TranslationSource.TextTranslation)
                                         </label>
                                     </td>
                                 </tr>
